fixed issue with alignment central container

--- a/app/assets/stylesheets/components/_card_container.scss
+++ b/app/assets/stylesheets/components/_card_container.scss
@@ -9,6 +9,7 @@
   max-width: 1600px;
   gap: 0.5rem;
   margin-bottom: 10rem;
+  width: 100%;
 }
 
 .card-container .card {
